--- a/package.json
+++ b/package.json
@@ -17,9 +17,25 @@
         "url": "https://github.com/MichalAW/26.Chat-Module/issues"
     },
     "homepage": "https://github.com/MichalAW/26.Chat-Module#readme",
-    "devDependencies": {},
-    "dependencies": {
+    "devDependencies": {
+        "babel-core": "^6.26.3",
+        "babel-loader": "^8.0.6",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-react": "^6.24.1",
+        "css-loader": "^3.0.0",
         "express": "^4.17.1",
-        "socket.io": "^2.2.0"
+        "html-webpack-plugin": "^3.2.0",
+        "optimize-js-plugin": "0.0.4",
+        "react-hot-loader": "^4.11.1",
+        "socket.io": "^2.2.0",
+        "style-loader": "^0.23.1",
+        "webpack": "^4.35.0",
+        "webpack-cli": "^3.3.5",
+        "webpack-dev-server": "^3.7.2"
+    },
+    "dependencies": {
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "socket.io-client": "^2.2.0"
     }
 }
