--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.html",
     "scripts": {
-        "test:echo": "echo \"Error: no test specified\" && exit 1"
+        "build": "webpack --env production",
+        "start": "webpack-dev-server --hot --env development"
     },
     "repository": {
         "type": "git",
