--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "webpack-dev-server": "^3.7.2"
     },
     "dependencies": {
+        "@babel/core": "^7.3.3",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "socket.io-client": "^2.2.0"
