--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-    "name": "26.Chat-Module",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.html",
-    "scripts": {
-        "build": "webpack --env production",
-        "start": "webpack-dev-server --hot --env development"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/MichalAW/26.Chat-Module.git"
-    },
-    "keywords": [],
-    "author": "MichalAW michal.wanta@gmail.com",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/MichalAW/26.Chat-Module/issues"
-    },
-    "homepage": "https://github.com/MichalAW/26.Chat-Module#readme",
-    "devDependencies": {
-        "babel-loader": "^8.0.6",
-        "css-loader": "^3.0.0",
-        "express": "^4.17.1",
-        "html-webpack-plugin": "^3.2.0",
-        "optimize-js-plugin": "0.0.4",
-        "react-hot-loader": "^4.11.1",
-        "socket.io": "^2.2.0",
-        "style-loader": "^0.23.1",
-        "webpack": "^4.35.0",
-        "webpack-cli": "^3.3.5",
-        "webpack-dev-server": "^3.7.2"
-    },
-    "dependencies": {
-        "@babel/core": "^7.4.5",
-        "@babel/preset-env": "^7.4.5",
-        "@babel/preset-react": "^7.0.0",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "socket.io-client": "^2.2.0"
-    }
+	"name": "socket-chat-example",
+	"version": "1.0.0",
+	"description": "CHAT project based on socket.io",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "webpack-dev-server --hot --env development",
+		"build": "webpack --env production"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/MichalAW/26.Chat-Module.git"
+	},
+	"keywords": [],
+	"author": "MichalAW michal.wanta@gmail.com",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/MichalAW/26.Chat-Module/issues"
+	},
+	"homepage": "https://github.com/MichalAW/26.Chat-Module#readme",
+	"dependencies": {
+		"@babel/core": "^7.4.5",
+		"@babel/preset-env": "^7.4.5",
+		"@babel/preset-react": "^7.0.0",
+		"express": "^4.17.1",
+		"react": "^16.8.6",
+		"react-dom": "^16.8.6",
+		"socket.io": "^2.2.0",
+		"socket.io-client": "^2.2.0"
+	},
+	"devDependencies": {
+		"babel-loader": "^8.0.6",
+		"css-loader": "^2.1.1",
+		"html-webpack-plugin": "^3.2.0",
+		"optimize-js-plugin": "0.0.4",
+		"react-hot-loader": "^4.8.8",
+		"style-loader": "^0.23.1",
+		"webpack": "^4.32.2",
+		"webpack-cli": "^3.3.2",
+		"webpack-dev-server": "^3.4.1"
+	}
 }
